# fungus

./: .clang-format  .gitignore  LICENSE.md  README.md  format.sh  fungus.sh  generate_parser  pom.xml  run_tests.sh
component/: README.md  clean_component.sh  make_component.sh  pom.xml
examples/: fizzbuzz.fun  hello_world.fun  io_cast_max.fun
examples/smallpt-cpp/: CMakeLists.txt  main.cpp
examples/smallpt-fungus/: smallpt.fun
examples/smallpt-java/: pom.xml
examples/smallpt-java/src/main/java/cz/metopa/smallpt/: SmallPT.java
language/: pom.xml
language/src/main/java/cz/metopa/fungus/: FException.java  FFileDetector.java  FLanguage.java  SLEvaluateLocalNode.java  SLException.java  SLFileDetector.java  SLLanguage.java
launcher/: pom.xml
tests/: array.fun  array_init_value.fun  array_multidimensinal.fun  array_negative_index.fun  array_runtime_size.fun  assert.fun  builtins.fun  custom_binop.fun  error_array_1.fun  error_array_2.fun  error_array_3.fun  error_assert.fun  error_break.fun  error_continue.fun  error_custom_binop.fun  error_file_1.fun  error_file_2.fun  error_func_1.fun  error_func_2.fun  error_func_signature_mismatch_1.fun  error_func_signature_mismatch_2.fun  error_hex_digit_1.fun  error_hex_digit_2.fun  error_if.fun  error_missing_main.fun  error_struct.fun  error_substr_1.fun  error_substr_2.fun  error_substr_3.fun  error_vec3_1.fun  fail_assert.fun  fail_if_condition_cast.fun  fail_short_curcuit.fun  fibonacci.fun  file.fun  file_append.fun  file_notfound.fun  file_overwrite.fun  for.fun  func.fun  (+12 more)
(+280 files in other folders)
